# fsod

./: .gitignore  INSTALL.md  README.md
AI_Agents_Under_The_Hood/: .cursorignore  .env.example  .gitignore  AI_Agents_MCP.ipynb  AI_Agents_MCP_Gateway.ipynb  AI_Agents_MCP_und_Gateway.ipynb  AI_Agents_Parallel_SubAgents.ipynb  AI_Agents_Skills.ipynb  AI_Agents_Streaming_EventQueue.ipynb  AI_Agents_under_the_Hood.ipynb  AI_Agents_under_the_Hood_Advanced.ipynb  Dockerfile.litellm  Dockerfile.mcp  README.md  build_combined_notebook.py  build_notebook.py  docker-compose.yml  litellm_config.yaml  mcp_demo_server.py  mcp_http_server.py  notebook_source.txt  pyproject.toml  setup.ps1  start-ctxman-azure-compaction.ps1  v1.json
AI_Agents_Under_The_Hood/docs/: Transcript_AI Agents under the Hood_ MCP - MCP Gateway.docx  entra-app-registration.md
agent_benchmarks/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
agent_benchmarks/agentkit_bench/: __init__.py  config.py  harbor_agent.py  report.py
agent_benchmarks/agentkit_bench/swebench/: docker_env.py  run_swebench.py
agent_benchmarks/litellm/: config.yaml  docker-compose.yml
agent_benchmarks/prompts/: benchmark_system_prompt.md
agent_benchmarks/scripts/: build_musl.sh
agent_framework/: .env.example  .gitignore  README.md  pyinstaller_entry.py  pyproject.toml
agent_framework/agentkit/: __init__.py  __main__.py  agent.py  cli.py  coding.py  demo.py  events.py  llm.py  mcp.py  memory.py  planning.py  roles.py  skills.py  subagents.py  tools.py
agent_framework/docs/spec/: README.md  _template.md  agent-roles.md  agentic-loop.md  cli.md  coding-tools.md  events.md  llm.md  mcp.md  memory.md  planning.md  skills.md  sub-agents.md  tool-registry.md
agent_framework/examples/: 01_react_tools.py  02_plan_and_execute.py  03_streaming_events.py  04_mcp.py  05_memory.py  06_coding_agent.py  07_parallel_subagents.py  08_skills.py  09_coding_subagents.py
agent_framework/examples/agents/: security-reviewer.md
agent_framework/examples/skills/changelog/: SKILL.md
agent_framework/examples/skills/rechnungsrueckfrage/: SKILL.md
agent_framework/tests/: test_agentkit.py
agent_framework_rs/: CLAUDE.md  Cargo.toml  README.md
agent_framework_rs/ctx-smoke/: snapshot.json
agent_framework_rs/docs/: USER_MANUAL.md
agent_framework_rs/examples/: parallel_subagents.rs  react_fake.rs
agent_framework_rs/examples/accounts_payable/: .gitattributes  .gitignore  Invoke-Ap.ps1  Invoke-ApPipeline.ps1  README.md  orchestrator.md
agent_framework_rs/examples/accounts_payable/inbox/: eingang_05_reinigung-sauber-gmbh.xml
agent_framework_rs/examples/accounts_payable/knowledge/: index.md
agent_framework_rs/examples/accounts_payable/modules/: ap-helpers.ps1
agent_framework_rs/examples/accounts_payable/prompts/: 02_extract_fields.md  03_validate.md  04_book.md  05_report.md
agent_framework_rs/examples/accounts_payable/roles/: booker.md  extractor.md
agent_framework_rs/examples/accounts_payable/tests/: Test-ApHelpers.ps1  Test-ComplianceTools.ps1  Test-Interactive.ps1  Test-XCheckIntegration.ps1
agent_framework_rs/examples/accounts_payable/tools/: Build-Samples.ps1  New-InboxBatch.ps1  New-SampleInvoicePdf.ps1  xcheck.ps1  zugferd-embed.xml
agent_framework_rs/examples/accounts_payable_interactive/: .gitignore  README.md  Start-ApOrchestrator.ps1  orchestrator.md
agent_framework_rs/examples/accounts_payable_interactive/inbox/: rechnung_berg.txt
agent_framework_rs/examples/accounts_payable_interactive/roles/: extractor.md  validator.md
agent_framework_rs/examples/accounts_payable_interactive/tests/: Test-Interactive.ps1
agent_framework_rs/examples/coding_swarm/: README.md  demo.rs  teamlead.md  teamlead_bench.md
agent_framework_rs/examples/coding_swarm/roles/: architect.md  developer.md  reviewer.md  tester.md
agent_framework_rs/examples/logwatch/: .gitignore  Invoke-LogWatch.ps1  README.md
agent_framework_rs/examples/logwatch/modules/: logwatch-helpers.ps1
agent_framework_rs/examples/logwatch/prompts/: 10_analyze.md  20_dedup.md
agent_framework_rs/examples/logwatch/state/: known.jsonl  offsets.json
agent_framework_rs/examples/logwatch/tests/: Test-LogWatch.ps1
agent_framework_rs/examples/logwatch/tools/: Build-Fixtures.ps1
agent_framework_rs/examples/pr_review/: README.md  mcp.json  profile.json
agent_framework_rs/examples/pr_review/roles/: pr-reviewer.md
agent_framework_rs/examples/pr_review/scripts/: review_pr.ps1
agent_framework_rs/examples/win_triage/: .gitignore  Invoke-WinTriage.ps1  README.md
agent_framework_rs/examples/win_triage/fixtures/: application.json  inventory.json  security.json  system.json  update.json
agent_framework_rs/examples/win_triage/modules/: triage-helpers.ps1
agent_framework_rs/examples/win_triage/prompts/: 10_system.md  11_security.md  12_application.md  (+4 more)
agent_framework_rs/src/: agent.rs  app.rs  cli.rs  coding.rs  config.rs  context.rs  demo.rs  events.rs  lib.rs  llm.rs  mcp.rs  memory.rs  planning.rs  roles.rs  skills.rs  subagents.rs  testing.rs  tools.rs  tui.rs
agent_framework_rs/tests/: integration.rs
agent_framework_rs/tmp/: .mcp.json  mini_mcp.py  spec_check_2026-06-22_140639.md
ctxman_rs/: Cargo.toml  README.md
ctxman_rs/docs/: USER_MANUAL.md
ctxman_rs/examples/: basic.rs  frames.rs  major_gc.rs  persistence.rs
ctxman_rs/src/: compaction.rs  error.rs  events.rs  http.rs  lib.rs  promotion.rs  snapshot.rs  tokenization.rs
ctxman_rs/src/domain/: blob_ref.rs  enums.rs  frame.rs  mod.rs  policy.rs  segment.rs  session.rs  watermark.rs
ctxman_rs/src/gc/: major.rs  minor.rs  mod.rs  units.rs
ctxman_rs/src/rendering/: adapter.rs  anthropic.rs  canonical_json.rs  mod.rs  model.rs  openai.rs  planner.rs  static_diff.rs  static_prefix.rs
ctxman_rs/src/session/: append.rs  epoch.rs  frames.rs  gc.rs  mod.rs  refs.rs  render.rs
ctxman_rs/src/storage/: fs.rs  memory.rs  mod.rs
ctxman_rs/tests/: domain.rs  gc_major.rs  gc_minor.rs  orchestration.rs  rendering.rs
ctxman_rs/tests/golden/: render-anthropic.json  render-openai.json
(+37 files in other folders)
