[project]
name = "ai-agents-under-the-hood"
version = "0.1.0"
description = "Ein Agent from scratch im Jupyter-Notebook - Vortrag 'AI Agents under the Hood'"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "pytest>=8.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.29.0",
    "mcp>=1.2.0",
]

# Dies ist eine Anwendung/ein Notebook-Projekt, kein installierbares Paket.
[tool.uv]
package = false
