[project]
name = "agentkit-bench"
version = "0.1.0"
description = "Benchmark-Harness: agentkit gegen SWE-bench Lite, Terminal-Bench 2.0 (Harbor) und Aider Polyglot"
requires-python = ">=3.12"
dependencies = [
    "harbor==0.20.0",
    "datasets>=3.0",
    "sb-cli>=0.1.5",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
# Nur für die volle lokale SWE-bench-Auswertung nötig (~120 GB Disk, x86_64).
# Smoke-Läufe werten über sb-cli in der Cloud aus.
local-eval = ["swebench>=4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentkit_bench"]
