[project]
name = "agentkit"
version = "0.1.0"
description = "Ein ganz einfaches Agent-Framework aus den 'AI Agents under the Hood'-Notebooks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
agentkit = "agentkit.cli:main"

[project.optional-dependencies]
tokens = ["tiktoken>=0.7.0"]
mcp = ["mcp>=1.2.0"]
dev = ["pytest>=8.0.0"]
all = ["tiktoken>=0.7.0", "mcp>=1.2.0", "pytest>=8.0.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agentkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
