[package]
name = "agentkit"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Rust-Port des 'AI Agents under the Hood'-Agent-Frameworks (agentkit)"
license = "MIT"

# Bibliothek + ein paar Beispiel-/Benchmark-Binaries.
[lib]
name = "agentkit"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Regex für das `grep`-Coding-Tool (verhaltenstreu zum Python-Original).
regex = "1"
# Kooperativer Ctrl-C-Abbruch (Stop-Knopf) im CLI.
ctrlc = "3"
# HTTP-Client für den echten OpenAI/Azure-Pfad — synchron, ohne async-Runtime.
ureq = { version = "2", optional = true, features = ["json", "tls"] }
# Terminal-UI (TUI) — nur fürs `tui`-Binary; crossterm wird über ratatui
# re-exportiert (ratatui::crossterm), daher keine zweite crossterm-Version.
ratatui = { version = "0.29", optional = true }

[features]
default = ["openai"]
# Echter LLM-Pfad (Azure/OpenAI) über ureq. Ohne dieses Feature baut der Kern
# (inkl. FakeLlm + Benchmarks) ganz ohne HTTP-/TLS-Abhängigkeiten.
openai = ["dep:ureq"]
# Interaktives Terminal-UI (`cargo run --bin tui --features tui`). Hält den Kern
# schlank: Standard-Build zieht kein ratatui. Ohne `openai` läuft das TUI im
# Demo-Modus (eingebauter, netzfreier LLM); mit `openai` zusätzlich Azure/OpenAI.
tui = ["dep:ratatui"]

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Die installierbare Haupt-Executable (CLI + optional TUI). Baut ohne Zusatz-Features;
# mit `--features tui` startet `agentkit --tui` zusätzlich das Terminal-UI.
[[bin]]
name = "agentkit"
path = "src/bin/agentkit.rs"

# Das Microbenchmark-Binary (gegen das Python-Pendant verglichen).
[[bin]]
name = "bench"
path = "src/bin/bench.rs"

# Interaktives Terminal-UI. Baut nur mit Feature `tui` (sonst fehlt ratatui).
[[bin]]
name = "tui"
path = "src/bin/tui.rs"
required-features = ["tui"]

# Beispiel: ReAct-Agent mit FakeLlm (kein Netz nötig).
[[example]]
name = "react_fake"
path = "examples/react_fake.rs"

# Beispiel: paralleler Orchestrator mit Sub-Agents (FakeLlm).
[[example]]
name = "parallel_subagents"
path = "examples/parallel_subagents.rs"
